--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.smartrecruiters.com/Veeam2/743999698573523-front-end-developer-aem-'>Veeam Front-End Developer (AEM) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/menlosecurity/jobs/4501326002'>Job Application for Front End Software Engineer at Menlo Security</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
@@ -122,7 +126,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nyLipMwh'>DNEG Careers - Front End Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSnaVfw4&k=Job&j=oVXebfw1&__jvst=Employee&__jvsd=sulY9hwI&__jvsc=Twitter&bid=nyLipMwh'>DNEG Careers - Front End Developer</a></h5> 
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -170,11 +174,11 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rbauction.referrals.selectminds.com/jobs/front-end-developer-2854'>Front-End Developer - Ritchie Bros. Careers</a></h5> 
+<h5><a href='https://rbauction.referrals.selectminds.com/jobs/front-end-developer-2854'>Front-End Developer - Ritchie Bros. Careers</a></h5> 
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1937416'>Job Application for Software Engineer- Front End at Fuze</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1937416'>Job Application for Software Engineer- Front End at Fuze</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -268,7 +272,7 @@
 <p><span class="badge badge-light">Noida  Noida</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oaBf8fwS&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nZmAoMwA'>Guidewire Software, Inc. Careers - Senior Software Engineer Front-End - Dublin, Ireland</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oaBf8fwS&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nZmAoMwA'>Guidewire Software, Inc. Careers - Senior Software Engineer Front-End - Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -354,7 +358,7 @@
 <p><span class="badge badge-light">New Zealand</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/daveramsey/job/oIIrbfwM'>Ramsey Solutions Careers - Senior Frontend Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/daveramsey/job/oIIrbfwM'>Ramsey Solutions Careers - Senior Frontend Developer</a></h5> 
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -362,7 +366,7 @@
 <p><span class="badge badge-light">Kuala Lumpur Malaysia</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.applythis.net/job/?a=421A1C104.0'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.applythis.net/job/?a=421A1C104.0'>
 	
     Apply for Front End Developer -  London, United Kingdom - IT and Internet - FED - Find a job, build a career
 
@@ -456,12 +460,6 @@
       Front End Developer (Javascript/React) - Wallet.Services
     </a></h5> 
 <p><span class="badge badge-light">Edinburgh, United Kingdom</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://searchmetrics.recruitee.com/l/en/o/senior-software-engineer-mfx-focus-frontend'>
-      Senior Software Engineer (m/f/x) - Focus Frontend - Searchmetrics GmbH
-    </a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
