--- a/product-manager.html
+++ b/product-manager.html
@@ -40,15 +40,29 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.lever.co/rimeto/a64bc561-09fc-40d1-bafd-5de53a4b605d'>Rimeto - Product Manager</a></h5> 
+<h5><a href='https://whatfix101.recruiterbox.com/jobs/fk03o2r/'>
+    Senior Product Designer at Whatfix
+</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/dcigroup/743999698575946-digital-product-manager'>DCI Group Digital Product Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Washington, DC</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='http://ticketnetwork.applytojob.com/apply/BLbn4AYhZh/Senior-Technical-Product-Manager'>Senior Technical Product Manager - TICKETNETWORK INC - Career Page</a></h5> 
+<p><span class="badge badge-light">South Windsor, CT</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/rimeto/a64bc561-09fc-40d1-bafd-5de53a4b605d'>Rimeto - Product Manager</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA  San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/canalplus/743999698569789-alternance-product-owner-f-h'>Groupe CANAL+ ALTERNANCE - Product Owner - F/H | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Ile de France France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/yieldstreet/ef175b08-1e06-4a5d-8335-e02168a1f54a'>YieldStreet - Product Manager, Customer Acquisition</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/yieldstreet/ef175b08-1e06-4a5d-8335-e02168a1f54a'>YieldStreet - Product Manager, Customer Acquisition</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -56,7 +70,7 @@
 <p><span class="badge badge-light">Barcelona, Catalonia, Spain</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/product-manager-36/'>Product Manager | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://producthire.net/job/product-manager-36/'>Product Manager | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">Singapore</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -102,11 +116,11 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kochcareers.referrals.selectminds.com/jobs/product-manager-engineer-separation-technology-35731'>Product Manager/Engineer- Separation Technology - Koch Industries Careers</a></h5> 
+<h5><a href='https://kochcareers.referrals.selectminds.com/jobs/product-manager-engineer-separation-technology-35731'>Product Manager/Engineer- Separation Technology - Koch Industries Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://whatfix101.recruiterbox.com/jobs/fk03o2r'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://whatfix101.recruiterbox.com/jobs/fk03o2r'>
     Senior Product Designer at Whatfix
 </a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
@@ -152,7 +166,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=ouhcbfwS&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=nSzgpMwn'>Compuware Careers - Product Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=ouhcbfwS&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=nSzgpMwn'>Compuware Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -176,7 +190,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dazn/e2db338c-f534-4a0a-b324-b4fe0ab5f631'>DAZN - Senior Product Manager - Global Platform</a></h5> 
+<h5><a href='https://jobs.lever.co/dazn/e2db338c-f534-4a0a-b324-b4fe0ab5f631'>DAZN - Senior Product Manager - Global Platform</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -248,7 +262,7 @@
 <p><span class="badge badge-light">UK - London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TheRIIMLLC/743999698526774-payment-product-manager'>TheRIIM LLC Payment Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TheRIIMLLC/743999698526774-payment-product-manager'>TheRIIM LLC Payment Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bellevue Bellevue, WA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -344,7 +358,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=oMbsbfwk&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=n5NAoMw7'>Justice Digital and Technology Careers - Product Manager, London</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qRIaVfwo&k=Job&j=oMbsbfwk&__jvst=Employee&__jvsd=sU0JUhwj&__jvsc=Jobvite&bid=n5NAoMw7'>Justice Digital and Technology Careers - Product Manager, London</a></h5> 
 <p><span class="badge badge-light">London  London  London London  London  London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -370,7 +384,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://quaero.applytojob.com/apply/REgOkGgAGk/Associate-Product-Manager'>Associate Product Manager - Quaero - Career Page</a></h5> 
+<h5><a href='http://quaero.applytojob.com/apply/REgOkGgAGk/Associate-Product-Manager'>Associate Product Manager - Quaero - Career Page</a></h5> 
 <p><span class="badge badge-light">Karnataka, India</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -410,7 +424,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light">Cupertino, CANorth Carolina</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://snap.hr/moneybox/job/product-manager/a9b5459dbc60eb14d55431f48f65f27b/'>Product Manager at Moneybox</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://snap.hr/moneybox/job/product-manager/a9b5459dbc60eb14d55431f48f65f27b/'>Product Manager at Moneybox</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -426,7 +440,7 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/VONQ/743999698459208-product-owner-business-process'>VONQ Product Owner Business Process | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/VONQ/743999698459208-product-owner-business-process'>VONQ Product Owner Business Process | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Rotterdam Rotterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -444,18 +458,6 @@ successful marketing strategy to increase market share of Vifor Pharma products
 <hr/>
 <h5><a href='https://boards.greenhouse.io/mercari/jobs/4485106002'>Job Application for Product Designer at Mercari</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://hire.withgoogle.com/public/jobs/ardoqcom/view/P_AAAAABkAAApMX6idgpuO17?utm_campaign=Recruitment&utm_content=104426567&utm_medium=social&utm_source=twitter&hss_channel=tw-1477476211'>Senior Product Designer job in Oslo, Norway at Ardoq</a></h5> 
-<p><span class="badge badge-light">Oslo, Norway Oslo, Norway</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oClmbfwe&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nRRdoMwA'>Benefitfocus Careers - Product Manager</a></h5> 
-<p><span class="badge badge-light">Charleston, South Carolina</span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PIQC/743999698379550-senior-product-manager'>Partners Internal Quality Control Senior Product Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
